--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
          <section id="gallery">
             <h2>Галерея</h2>
-            <img src="C:\Users\пользователь\Desktop\M\png\masha.png" alt="Маша">
-            <img src="C:\Users\пользователь\Desktop\M\png\masha2.png" alt="Маша 2">
+            <img src="masha.png" alt="Маша">
+            <img src="masha2.png" alt="Маша 2">
         </section>
 
 
