--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <section id="contact">
     <h2>Контакты</h2>
     <p>Вы всегда можете связаться с Славиком через Telegram:</p>
-    <a href="https://web.telegram.org/k/#@FtoRnick1" target="_blank">
+    <a href="https://web.telegram.org/k/#@lokuei" target="_blank">
         <img src="telegram-icon-social-media-popular-messenger-app_277909-203.png" alt="Telegram">
     </a>
 </section>
