--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <section id="gallery">
             <h2>Галерея</h2>
             <img src="masha.png" alt="Маша">
-            <img src="masha2.png" alt="Маша 2">
+            <img src="маша.jpg" alt="Маша 2">
         </section>
 
 
